--- a/style.css
+++ b/style.css
@@ -1,15 +1,41 @@
-body {
-  margin: 0;
+* {
   padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-#banner {
+
+/* Google fonts import */
+@import url('<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tajawal:wght@200;300;400;500;700;800;900&display=swap" rel="stylesheet">');
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+
+header {
   height: 30vh;
-  background-color: aliceblue;
+  background: url("../images/women.jpeg") no-repeat center/cover;
+  /* Center Header Text */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-size: 1rem;
+  letter-spacing: 1px;
+}
+
+h1 {
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+header p {
+  text-align: center;
 }
 
 nav.navigation {
   height: 10vh;
-  background-color: white;
+  background-color: lightgray;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-evenly;
@@ -24,13 +50,4 @@ div.each-nav {
   flex-flow: column wrap;
   justify-content: space-evenly;
   align-items: center;
-
 }
-
-section.chart {
-  background-color: #f9f9f9;
-  height: 60vh;
-}
-
-
-
