--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@
 
 body {
   font-family: "Roboto", sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
@@ -20,17 +23,21 @@ header {
   justify-content: center;
   color: #fff;
   font-size: 1rem;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
 }
 
 h1 {
   font-weight: bold;
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing: 3px;
 }
 
 header p {
   text-align: center;
+}
+
+main {
+  flex: 1;
 }
 
 nav.navigation {
@@ -50,4 +57,17 @@ div.each-nav {
   flex-flow: column wrap;
   justify-content: space-evenly;
   align-items: center;
+}
+
+footer {
+  height: 5vh;
+  background-color: lightblue;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  letter-spacing: 1px;
 }
