--- a/style.css
+++ b/style.css
@@ -59,10 +59,21 @@ div.each-nav {
   flex-flow: column wrap;
   justify-content: space-evenly;
   align-items: center;
+  cursor: pointer;
+}
+
+div.each-nav:hover svg {
+  height: 3em;
 }
 
 #charts {
   display: flex;
+}
+
+section {
+  height: 300px;
+  background-color: aliceblue;
+  margin: 10px;
 }
 
 /* Footer */
